--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,39 @@
 <html lang="en-US">
   <head>
     <title>Ben Holmes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://use.typekit.net/liz3dnm.css">
   </head>
   <body>
-    <h1 id="example">Example</h1>
-<p>This is a markdown file <em><strong>with <a href="https://duckduckgo.com">links</a>!</strong></em></p>
-<p>cool!
-<button>And a button!</button></p>
+    <nav>
+<a href="/">Me</a>
+<a href="/projects">Projects</a>
+<a href="/contact">Contact</a>
+</nav>
+<section class="header">
+<img width="600" height="600" src="/static/me.jpg" alt="Hand-drawn portrait of Ben Holmes">
+<div class="header-text" markdown><h1 id="benholmes">Ben Holmes</h1>
+<ul>
+<li>Frontend web dev</li>
+<li>UX freak</li>
+<li>Blogger</li>
+<li>Fan of charcoal</li>
+</ul>
+<p><a href="#teach">More about me
+<img height="30" width="30" src="/static/icons/arrow-down.svg" />
+</a></p></div>
+</section>
+<section id="teach" class="home" style="--section-color: var(--red)">
+<div class="section-description" markdown><h2 id="iteach">I teach.</h2>
+<p class="in-brief-header">In brief...</p>
+<ul>
+<li>Built a fullstack bootcamp with in-person workshops</li>
+<li>Top 500 author on DEV.to</li>
+</ul></div>
+<div class="content" markdown><p>Web dev is my passion. Web dev is my passion. Web dev is my passion. Web dev is my passion. Web dev is my passion. Web dev is my passion Web dev is my passion Web dev is my passion.</p>
+<p>2 Web dev <strong>is</strong> my passion Web dev is my passion. Web dev is my passion Web dev is my passion. Web dev is my passion Web dev is my passion. Web dev is my passion Web dev is my passion. Web dev is my passion Web dev is my passion</p></div>
+</section>
   </body>
   <script src="index.js"></script>
 </html>
