--- a/public/projects.html
+++ b/public/projects.html
@@ -2,7 +2,9 @@
 <html lang="en-US">
   <head>
     <title>Ben Holmes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="https://use.typekit.net/liz3dnm.css">
   </head>
   <body>
     <h1 id="projects">Projects</h1>
