add dashed link anim first draft, bootie section

--- a/public/index.html
+++ b/public/index.html
@@ -8,33 +8,59 @@
   </head>
   <body>
     <nav>
-<a href="/">Me</a>
+<a href="/" class="active">Me</a>
 <a href="/projects">Projects</a>
 <a href="/contact">Contact</a>
+<div id="dashed-line" />
 </nav>
 <section class="header">
-<img width="600" height="600" src="/static/me.jpg" alt="Hand-drawn portrait of Ben Holmes">
-<div class="header-text" markdown><h1 id="benholmes">Ben Holmes</h1>
+  <img width="600" height="600" src="/static/me.jpg" alt="Hand-drawn portrait of Ben Holmes">
+  <div class="header-text" markdown><h1 id="benholmes">Ben Holmes</h1>
 <ul>
-<li>Frontend web dev</li>
+<li>Web dev</li>
 <li>UX freak</li>
 <li>Blogger</li>
-<li>Fan of charcoal</li>
+<li>Charcoal fan</li>
 </ul>
 <p><a href="#teach">More about me
 <img height="30" width="30" src="/static/icons/arrow-down.svg" />
 </a></p></div>
 </section>
-<section id="teach" class="home" style="--section-color: var(--red)">
-<div class="section-description" markdown><h2 id="iteach">I teach.</h2>
+<section class="me-description">
+<div class="content-header social-links" markdown><h2 id="inbrief">In brief.</h2>
+<p><a href="https://twitter.com/bholmesdev"><img src="/static/icons/twitter.svg" alt="" /> Short thoughts</a>
+<a href="https://dev.to/bholmesdev"><img src="/static/icons/devto.svg" alt="" /> Long reads</a>
+<a href="https://linkedin.com/in/bholmesdev"><img src="/static/icons/linkedin.svg" alt="" /> Get professional</a></p></div>
+
+<div class="content" markdown><p>I first got into software development not through algorithms, not unit testing, not objected-oriented principles… none of the hirable buzzwords. Back in high school, I was wrestling with Java concepts because <em>I love making shiny pixels move around on a screen.</em></p>
+<p>Back then, it was in the pursuit of inefficient, spaghetti-coded video games. Now, I've channeled a love for graphics into <em><strong>web development and design</strong></em>. I spent most of my time at Georgia Tech figuring out the sexiest frameworks to use, the most impactful way to apply my novice knowledge, and how to teach others at a beginner's level. I'm just entering the working world as an adult-in-denial, so I hope <a href="https://dev.to/bholmesdev">my lessons learned along the way</a> end up helping you!</p></div>
+</section>
+<div style="--section-color: var(--red)" markdown><section id="teach" class="me-description">
+<div class="content-header" markdown><h2 id="iteach">I teach.</h2>
 <p class="in-brief-header">In brief...</p>
 <ul>
-<li>Built a fullstack bootcamp with in-person workshops</li>
-<li>Top 500 author on DEV.to</li>
+<li>Learning web dev sucks and I want to help</li>
+<li>Co-authored fullstack bootcamp with in-person workshops</li>
+<li>Became Top 500 author on DEV.to in 2019</li>
 </ul></div>
-<div class="content" markdown><p>Web dev is my passion. Web dev is my passion. Web dev is my passion. Web dev is my passion. Web dev is my passion. Web dev is my passion Web dev is my passion Web dev is my passion.</p>
-<p>2 Web dev <strong>is</strong> my passion Web dev is my passion. Web dev is my passion Web dev is my passion. Web dev is my passion Web dev is my passion. Web dev is my passion Web dev is my passion. Web dev is my passion Web dev is my passion</p></div>
+<div class="content" markdown><p>Let's be honest, picking up web development ain't easy. I spent years banging my head against Codecademy tutorials and W3schools to vertically center a div (and the top Stack Overflow answer is still wrong 😑). What's even worse is how disconnected university CS curricula ends up feeling compared to <em>useful</em> web development concepts.</p>
+<p>So, I got tired of sitting in silence. I started a blog back in 2019 as a place to paste some concepts and snippets I learned into a public resource. This somehow made me a Top 500 author on DEV.to (I'll never understand that…), which motivated me to get more involved as a web dev teacher at Georgia Tech. Now, I have <strong><span id="post-count">10</span></strong> posts to my name and an entire curriculum of full stack fundamentals!</p></div>
 </section>
+<section id="bootcamp" class="me-description">
+
+<a class="image-link" href="https://www.notion.so/gtbitsofgood/Bootcamp-b1fe164df73e42d3b9c2ab0755e4ca49">
+<div class="img-container">
+<img src="static/bootie-squad.jpg" alt="Group photo with bootcampers">
+</div>
+
+<p>Browse the curriculum</p>
+</a>
+
+<div markdown><h3 id="iledabootcamp">I led a bootcamp.</h3>
+<p>I asked around the dev community to udnerstand how people learn best, and I found a variety of approaches from written documentation to recorded code-alongs. So, I tried to make a bootcamp that was the best of <em>all</em> worlds, incorporating video activites, written code samples, and in-person workshops to create one <strong>mega resource</strong> for becoming a MERN stack sorcerer 🔮</p>
+<p>We've been teaching this material at the <a href="https://bitsofgood.org">Bits of Good student org</a> for 2 semesters now, so we've had a lot of time to work out the kinks. Click through to find our videos, resources, and project templates 100% free! A huge thanks to Andre Hijouay for creating the incredible v1 of the bootcamp, Max Karpawich for our lovely backend materials, and James Wang for contributing + teaching 😁</p></div>
+
+</section></div>
   </body>
   <script src="index.js"></script>
 </html>
