--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,11 @@
 <a href="/contact">Contact</a>
 <div id="dashed-line" />
 </nav>
-<p><div style="--section-color: var(--green)" markdown></p>
+<p><main>
+<div style="--section-color: var(--green)" markdown></p>
 <section class="me-header">
-  <img width="600" height="600" src="/static/me.jpg" alt="Hand-drawn portrait of Ben Holmes">
-  <div class="me-header__content" markdown><h1 id="benholmes">Ben Holmes</h1>
+<img width="600" height="600" src="/static/me.jpg" alt="Hand-drawn portrait of Ben Holmes">
+<div class="me-header__content" markdown><h1 id="benholmes">Ben Holmes</h1>
 <ul>
 <li>Web dev</li>
 <li>UX freak</li>
@@ -27,14 +28,29 @@
 <img height="30" width="30" src="/static/icons/arrow-down.svg" />
 </a></p></div>
 </section>
+<div class="line-accents-container">
+<div class="line-accents">
+<div></div>
+<div></div>
+<div></div>
+</div>
+</div>
 <section class="me">
 <div class="me-section-header social-links" markdown><h2 id="inbrief">In brief.</h2>
 <p><a href="https://twitter.com/bholmesdev"><img src="/static/icons/twitter.svg" alt="" /> Short thoughts</a>
 <a href="https://dev.to/bholmesdev"><img src="/static/icons/devto.svg" alt="" /> Long reads</a>
 <a href="https://linkedin.com/in/bholmesdev"><img src="/static/icons/linkedin.svg" alt="" /> Get professional</a></p></div>
 
-<div markdown><p>I first got into software development not through algorithms, not unit testing, not objected-oriented principles… none of the hirable buzzwords. Back in high school, I was wrestling with Java concepts because <em>I love making shiny pixels move around on a screen.</em></p>
+<div markdown><p><label class="in-brief-switch">
+<input type="checkbox" checked>
+<span class="in-brief-switch__personal">Personal Mode</span>
+<span class="in-brief-switch__slider"></span>
+<span class="in-brief-switch__recruiter">Recruiter Mode</span>
+</label></p>
+<div class="in-brief__personal-content" markdown><p>I first got into software development not through algorithms, not unit testing, not objected-oriented principles… none of the hirable buzzwords. Back in high school, I was wrestling with Java concepts because <em>I love making shiny pixels move around on a screen.</em></p>
 <p>Back then, it was in the pursuit of inefficient, spaghetti-coded video games. Now, I've channeled a love for graphics into <em><strong>web development and design</strong></em>. I spent most of my time at Georgia Tech figuring out the sexiest frameworks to use, the most impactful way to apply my novice knowledge, and how to teach others at a beginner's level. I'm just entering the working world as an adult-in-denial, so I hope <a href="https://dev.to/bholmesdev">my lessons learned along the way</a> end up helping you!</p></div>
+<div class="in-brief__recruiter-content" markdown><p>Recruiter bs!</p>
+<p><em>Very</em> cool.</p></div></div>
 </section>
 <div style="--section-color: var(--red)" markdown><section id="teach" class="me">
 <div class="me-section-header in-brief" markdown><h2 id="iteach">I teach.</h2>
@@ -62,6 +78,7 @@
 <p>We've been teaching this material at the <a href="https://bitsofgood.org">Bits of Good student org</a> for 2 semesters now, so we've had a lot of time to work out the kinks. Click through to find our videos, resources, and project templates 100% free! A huge thanks to Andre Hijouay for creating the incredible v1 of the bootcamp, Max Karpawich for our lovely backend materials, and James Wang for contributing + teaching 😁</p></div>
 
 </section></div>
+<p></main></p>
   </body>
   <script src="index.js"></script>
 </html>
