add logic to switch in brief sections on checked

--- a/public/index.html
+++ b/public/index.html
@@ -42,14 +42,14 @@
 <a href="https://linkedin.com/in/bholmesdev"><img src="/static/icons/linkedin.svg" alt="" /> Get professional</a></p></div>
 
 <div markdown><p><label class="in-brief-switch">
-<input type="checkbox" checked>
+<input id="in-brief-mode-checkbox" type="checkbox" checked>
 <span class="in-brief-switch__personal">Personal Mode</span>
 <span class="in-brief-switch__slider"></span>
 <span class="in-brief-switch__recruiter">Recruiter Mode</span>
 </label></p>
-<div class="in-brief__personal-content" markdown><p>I first got into software development not through algorithms, not unit testing, not objected-oriented principles… none of the hirable buzzwords. Back in high school, I was wrestling with Java concepts because <em>I love making shiny pixels move around on a screen.</em></p>
+<div id="in-brief__personal-content" markdown><p>I first got into software development not through algorithms, not unit testing, not objected-oriented principles… none of the hirable buzzwords. Back in high school, I was wrestling with Java concepts because <em>I love making shiny pixels move around on a screen.</em></p>
 <p>Back then, it was in the pursuit of inefficient, spaghetti-coded video games. Now, I've channeled a love for graphics into <em><strong>web development and design</strong></em>. I spent most of my time at Georgia Tech figuring out the sexiest frameworks to use, the most impactful way to apply my novice knowledge, and how to teach others at a beginner's level. I'm just entering the working world as an adult-in-denial, so I hope <a href="https://dev.to/bholmesdev">my lessons learned along the way</a> end up helping you!</p></div>
-<div class="in-brief__recruiter-content" markdown><p>Recruiter bs!</p>
+<div id="in-brief__recruiter-content" markdown><p>Recruiter bs!</p>
 <p><em>Very</em> cool.</p></div></div>
 </section>
 <div style="--section-color: var(--red)" markdown><section id="teach" class="me">
