refactor intersector observer logic, truncate to IIFEs

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 <div></div>
 </div>
 </div>
-<section class="me">
+<section id="inbrief-section" class="me">
 <div class="me-section-header social-links" markdown><h2 id="inbrief">In brief.</h2>
 <p><a href="https://twitter.com/bholmesdev"><img src="/static/icons/twitter.svg" alt="" /> Short thoughts</a>
 <a href="https://dev.to/bholmesdev"><img src="/static/icons/devto.svg" alt="" /> Long reads</a>
@@ -49,10 +49,10 @@
 </label></p>
 <div id="in-brief__personal-content" markdown><p>I first got into software development not through algorithms, not unit testing, not objected-oriented principles… none of the hirable buzzwords. Back in high school, I was wrestling with Java concepts because <em>I love making shiny pixels move around on a screen.</em></p>
 <p>Back then, it was in the pursuit of inefficient, spaghetti-coded video games. Now, I've channeled a love for graphics into <em><strong>web development and design</strong></em>. I spent most of my time at Georgia Tech figuring out the sexiest frameworks to use, the most impactful way to apply my novice knowledge, and how to teach others at a beginner's level. I'm just entering the working world as an adult-in-denial, so I hope <a href="https://dev.to/bholmesdev">my lessons learned along the way</a> end up helping you!</p></div>
-<div id="in-brief__recruiter-content" markdown><p>Recruiter bs!</p>
-<p><em>Very</em> cool.</p></div></div>
+<div id="in-brief__recruiter-content" markdown><p>I'm extremely hirable!</p>
+<p><a href="https://drive.google.com/file/d/1_Dix3-mAHaPVNEB2xIZeZ9RMkZRJ0A8O/view?usp=sharing">Take my resume</a></p></div></div>
 </section>
-<div style="--section-color: var(--red)" markdown><section id="teach" class="me">
+<div style="--section-color: var(--red)" markdown><section id="iteach-section" class="me">
 <div class="me-section-header in-brief" markdown><h2 id="iteach">I teach.</h2>
 <p class="me-section-header__in-brief-label">In brief...</p>
 <ul>
@@ -60,8 +60,8 @@
 <li>Co-authored fullstack bootcamp with in-person workshops</li>
 <li>Became Top 500 author on DEV.to in 2019</li>
 </ul></div>
-<div markdown><p>Let's be honest, picking up web development ain't easy. I spent years banging my head against Codecademy tutorials and W3schools to vertically center a div (and the top Stack Overflow answer is still wrong 😑). What's even worse is how disconnected university CS curricula ends up feeling compared to <em>useful</em> web development concepts.</p>
-<p>So, I got tired of sitting in silence. I started a blog back in 2019 as a place to paste some concepts and snippets I learned into a public resource. This somehow made me a Top 500 author on DEV.to (I'll never understand that…), which motivated me to get more involved as a web dev teacher at Georgia Tech. Now, I have <strong><span id="post-count">10</span></strong> posts to my name and an entire curriculum of full stack fundamentals!</p></div>
+<div markdown><p>Let's be honest, picking up web development ain't easy. I spent years banging my head against Codecademy tutorials and W3schools to vertically center a div (and the top Stack Overflow answer is still wrong 😑). What's even worse is how disconnected university CS curricula ends up feeling compared to <em>practical</em> web development concepts.</p>
+<p>So, I got tired of sitting in silence. I started a blog back in 2019 as a place to paste some concepts and snippets I learned into a public resource. This somehow made me a Top 500 author on DEV.to, which motivated me to get more involved as a web dev teacher at Georgia Tech. Now, I have <strong><span id="post-count">10</span></strong> posts to my name and an entire curriculum of full stack fundamentals!</p></div>
 </section>
 <section id="bootcamp" class="me">
 
