move nav bar to global page layout

--- a/public/projects.html
+++ b/public/projects.html
@@ -6,17 +6,16 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <nav>
+      <a href="/" class="active">Me</a>
+      <a href="/projects">Projects</a>
+      <a href="/contact">Contact</a>
+      <div id="dashed-line" />
+    </nav>
     <main 
           hidden
           data-route="/">
-          <nav>
-<a href="/" class="active">Me</a>
-<a href="/projects">Projects</a>
-<a href="/contact">Contact</a>
-<div id="dashed-line" />
-</nav>
-<p><main>
-<div style="--section-color: var(--green)" markdown></p>
+          <p><div style="--section-color: var(--green)" markdown></p>
 <section class="me-header">
 <img width="600" height="600" src="/static/me.jpg" alt="Hand-drawn portrait of Ben Holmes">
 <div class="me-header__content" markdown><h1 id="benholmes">Ben Holmes</h1>
@@ -80,7 +79,6 @@
 <p>We've been teaching this material at the <a href="https://bitsofgood.org">Bits of Good student org</a> for 2 semesters now, so we've had a lot of time to work out the kinks. Click through to find our videos, resources, and project templates 100% free! A huge thanks to Andre Hijouay for creating the incredible v1 of the bootcamp, Max Karpawich for our lovely backend materials, and James Wang for contributing + teaching 😁</p></div>
 
 </section></div>
-<p></main></p>
         </main><main 
           
           data-route="/projects">
